--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -2,8 +2,8 @@ chest-xray-pneumonia.zip:
 	kaggle datasets download paultimothymooney/chest-xray-pneumonia
 
 data/chest-xray:
-	mkdir -p data
-	unzip chest-xray-pneumonia.zip -d data/
+	mkdir -p data/raw
+	unzip chest-xray-pneumonia.zip -d data/raw
 
 chest-xray-dataset: \
 	chest-xray-pneumonia.zip \
