Limpiando dataset de kaggle

--- a/experiments/Makefile
+++ b/experiments/Makefile
@@ -5,6 +5,11 @@ data/chest-xray:
 	mkdir -p data/raw
 	unzip chest-xray-pneumonia.zip -d data/raw
 
-chest-xray-dataset: \
+clear_dataset_chest_xray:
+	rm -r data/raw/chest_xray/__MACOSX
+	rm -r data/raw/chest-xray/chest-xray
+
+get_chest_xray_dataset: \
 	chest-xray-pneumonia.zip \
-	data/chest-xray
+	data/chest-xray \
+	clear_dataset_chest-xray
