--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.5
 notebook==6.0.3
+numpy==1.18.2
+pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
@@ -36,6 +38,7 @@ Pygments==2.6.1
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-slugify==4.0.0
+pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.2
 QtPy==1.9.0
